--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -23,7 +23,7 @@ jobs:
           - os: Linux
             arch: X64
             triple: x86_64-unknown-linux-gnu
-    runs-on: [ self-hosted, prod, ${{ matrix.os }}, ${{ matrix.arch }} ]
+    runs-on: [ self-hosted, prod, "${{ matrix.os }}", "${{ matrix.arch }}" ]
     steps:
       - name: Install Rust
         uses: actions-rs/toolchain@v1
