--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -26,7 +26,7 @@ jobs:
     runs-on: [ self-hosted, prod, "${{ matrix.os }}", "${{ matrix.arch }}" ]
     steps:
       - name: Install Rust
-        uses: actions-rs/toolchain@v1
+        uses: risc0/actions-rs-toolchain@v1
 
       - name: Check out risc0/rust
         uses: actions/checkout@v3
