--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -40,7 +40,7 @@ jobs:
         uses: actions/checkout@v3
         with:
           repository: risc0/risc0
-          ref: main
+          ref: flaub/toolchain-ci
           path: risc0
 
       - name: Build
