--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -39,10 +39,8 @@ jobs:
       # We need the full history for the main repo so the build tooling can
       # determine the cached LLVM download.
       - name: Fetch full branch history
-        run: |
-          cd rust
-          git fetch --unshallow origin $(git branch --show-current)
-          echo "Branch history fetched!"
+        run: git fetch origin $(git branch --show-current)
+        working-directory: risc0
 
       - name: Check out risc0/risc0
         uses: actions/checkout@v3
