--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -41,7 +41,7 @@ jobs:
         uses: actions/checkout@v3
         with:
           repository: risc0/risc0
-          ref: flaub/toolchain-ci
+          ref: main
           path: risc0
 
       - name: Build
