--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -42,7 +42,7 @@ jobs:
         uses: actions/checkout@v3
         with:
           repository: risc0/risc0
-          ref: flaub/bump-rust
+          ref: main
           path: risc0
 
       - name: Build
